--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     margin: 0%;
     padding: 0%;
 
-   .footer {
+   .header {
      text-align: center;
      font-family: 'Times New Roman', Times, serif;
      color: white;
@@ -95,7 +95,7 @@
         
         display: grid;
         grid-template-rows: 175px 175px 175px 175px 175px 175px;
-        grid-template-columns: 200px 200px 200px 200px ;    
+        grid-template-columns: 200px 200px 200px 200px 200px;    
         padding: 80px;
     }
     .aa
@@ -113,6 +113,36 @@
      align-items: right;
      font-size: 64px;
     }
+
+    /*.board2=mobile .board = pc*/
+    @media screen and (min-width: 800px){ 
+        .board2{
+           display: none;
+        }
+    }
+
+
+    @media screen and (max-width: 800px){ 
+        .board2{
+            display: grid;
+            grid-template-rows: 175px 175px 175px 175px 175px 175px 175px 175px 175px;
+            grid-template-columns: 200px 200px 200px ;    
+            padding: 80px;
+        }
+    }
+    @media screen and (min-width: 800px){ 
+        .board2{
+           display: none;
+        }
+    }
+
+    
+    @media screen and (max-width: 800px){ 
+        .board{
+            display: none;
+            
+        }
+    }
     
     .aa:hover{
         background-color: #006e58;
@@ -126,4 +156,6 @@
     .aa:active{
         background-color: rgb(65, 115, 145);
     }
+
+    
 }
