--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,17 @@
    .header {
      text-align: center;
      font-family: 'Times New Roman', Times, serif;
+     font-size: xx-large;
      color: white;
+     width: auto;
+     height: 30vh;
      border-style: solid;    
      border-color: ghostwhite;
      box-sizing: border-box;
      background-color: rgb(17, 170, 94);
      padding: 5%;
    }
+   
     .navbar {
         overflow: hidden;
         background-color: grey;
@@ -115,34 +119,48 @@
     }
 
     /*.board2=mobile .board = pc*/
-    @media screen and (min-width: 800px){ 
-        .board2{
-           display: none;
-        }
+    @media screen and (min-width: 1000px){ 
+        
     }
 
 
-    @media screen and (max-width: 800px){ 
-        .board2{
-            display: grid;
-            grid-template-rows: 175px 175px 175px 175px 175px 175px 175px 175px 175px;
-            grid-template-columns: 200px 200px 200px ;    
-            padding: 80px;
-        }
-    }
-    @media screen and (min-width: 800px){ 
-        .board2{
-           display: none;
-        }
-    }
+    @media screen and (max-width: 1000px){ 
 
-    
-    @media screen and (max-width: 800px){ 
-        .board{
-            display: none;
+        .header{
+            font-size: large;   
+            height: 25vb;
+            padding: 50px;
+            align-items: center;
             
         }
+
+        .board{    
+            
+            display: grid;
+            grid-template-rows: 110px 110px 110px 110px 110px 110px;
+            grid-template-columns: 65px 65px 65px 65px 65px;    
+            padding: 8vb;
+        }
+
+        .aa
+        {
+         display: flex;
+         border-radius: 10px;
+         width: 30px;
+         height: 50px;
+         padding: 15px;
+         margin: 0px;        
+         background-color: #f3fdfd;
+         color: black;
+         display: flex;
+         align-items: center;
+         font-size: 45px;
+        }
+
+           
     }
+   
+
     
     .aa:hover{
         background-color: #006e58;
