--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
      font-size: xx-large;
      color: white;
      width: auto;
-     height: 30vh;
+     height: 40vh;
      border-style: solid;    
      border-color: ghostwhite;
      box-sizing: border-box;
@@ -83,7 +83,7 @@
         display: block;
     }
     
-    .mn
+    .mn-board
     {
       display: flex;
       justify-content: center;
@@ -120,7 +120,24 @@
 
     /*.board2=mobile .board = pc*/
     @media screen and (min-width: 1000px){ 
-        
+
+    .mn
+    {
+      display: flex;
+      justify-content: left;
+      
+    }
+    .text
+    {
+        justify-content: left;
+        display: grid;
+        grid-template-rows: 200px 100px 300px ;
+        grid-template-columns: 500px ;
+        text-align: left;
+        padding: 1vb;
+        margin: 10vb;
+    }
+    
     }
 
 
@@ -128,11 +145,14 @@
 
         .header{
             font-size: large;   
-            height: 25vb;
-            padding: 50px;
+            height: 40vb;
+            padding: 120px;
             align-items: center;
             
+            
         }
+
+        
 
         .board{    
             
@@ -164,7 +184,26 @@
             margin: 0px;
             padding: 15px;        
         }
-                     
+        
+        .text > h1 
+        {
+            display: grid;
+            grid-template-columns: 350px ;
+            margin-top: 30px;
+            
+        }
+        .text
+        {
+            
+            display: grid;
+            grid-template-rows: 200px 100px 550px;
+            grid-template-columns: 320px ;
+            text-align: left;
+            padding: 5px;
+            margin: 5px;
+        }
+
+        
     }
    
 
@@ -177,6 +216,6 @@
     .aa:active{
         background-color: rgb(65, 115, 145);
     }
+ 
 
-    
 }
