--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 *{
     margin: 0%;
     padding: 0%;
+}
 
    .header {
      text-align: center;
@@ -118,6 +119,42 @@
      font-size: 64px;
     }
 
+    
+    
+    
+    .aa:hover{
+        background-color: #006e58;
+        color: white;
+    }
+
+    .aa:active{
+        background-color: rgb(65, 115, 145);
+    }
+
+    section
+    {
+        display: flex;
+        justify-content: center;
+        background-color: white;
+    }
+    .tab
+    {
+        background-color: white;
+        width: 120vh;
+        padding: 5px;
+        margin-bottom: 10vh;
+    }
+     th,td
+    {
+        font-size: xx-large;
+        background-color: #f3fdfd;
+        border-radius: 4px;
+        border: 1px solid rgb(60, 60, 60);
+        text-align: center;
+    }
+ 
+    /*-------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+    
     /*.board2=mobile .board = pc*/
     @media screen and (min-width: 1000px){ 
 
@@ -143,15 +180,16 @@
 
     @media screen and (max-width: 1000px){ 
 
-        .header{
-            font-size: large;   
-            height: 40vb;
-            padding: 120px;
-            align-items: center;
-            
-            
+        .header{ 
+            height: 25vb;
+            padding: 30px;
+            text-align: center;
+                
         }
-
+        .header > h1
+        {
+            font-size: 45px;
+        }
         
 
         .board{    
@@ -159,7 +197,8 @@
             display: grid;
             grid-template-rows: 110px 110px 110px 110px 110px 110px;
             grid-template-columns: 68px 68px 68px 68px 68px;    
-            padding: 8vb;
+            margin-top: 8vb;
+            padding: 0;
         }
 
         .aa
@@ -205,17 +244,3 @@
 
         
     }
-   
-
-    
-    .aa:hover{
-        background-color: #006e58;
-        color: white;
-    }
-
-    .aa:active{
-        background-color: rgb(65, 115, 145);
-    }
- 
-
-}
